Update mergeListWithDTO